Updated to add non ezt assignments